--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PGConnection": "Host=localhost;Port=5432;Database=ems_db;Username=ems_user;Password=ems_password"
+  },
+  "JwtOptions": {
+    "Secret": "super_-$$Secret==@JwtKey&&^^forsigning%%%tokens!",
+    "Issuer": "Employee.ManagementSystem",
+    "Audience": "Employee.ManagementSystem.Users",
+    "ExpirationTimeInMinutes": 50
+  }
 }
