--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,18 +10,21 @@ WORKDIR /src
 # Since the Dockerfile is in the 'backend' folder, 'backend.csproj' is in the current context.
 COPY backend.csproj ./
 
-# Restore project dependencies.
-RUN dotnet restore backend.csproj
-
 # Copy the rest of the application source code to the working directory.
 # This copies all files from the 'backend' folder (where the Dockerfile is) into /src.
 COPY . .
 
+# Restore project dependencies.
+RUN dotnet restore backend.csproj
+
+# Build the project first to ensure all dependencies are resolved and compiled.
+# This step helps to catch any compilation issues before publishing.
+RUN dotnet build backend.csproj -c Release --no-restore
+
 # Publish the application for production.
-# This command compiles the application and publishes it to the 'out' directory.
-# --no-restore ensures that restore is not run again (it was done in a previous layer).
-# --no-build ensures that build is not run again (it was done implicitly by publish).
-RUN dotnet publish backend.csproj -c Release -o /app/publish --no-restore
+# Removed --no-restore here to ensure a full restore happens during publish,
+# which often resolves NETSDK1064 errors related to missing packages.
+RUN dotnet publish backend.csproj -c Release -o /app/publish
 
 # Stage 2: Run the ASP.NET Core application
 # Use the ASP.NET runtime image, which is smaller and more secure for production.
@@ -39,9 +42,19 @@ EXPOSE 7026
 # Set environment variables for ASP.NET Core.
 # This tells ASP.NET Core to listen on all available network interfaces for HTTPS.
 ENV ASPNETCORE_URLS="https://+*:7026"
-# Set the ASP.NET Core environment to Production. Set To Development If You Want Scalar.
+# Set the ASP.NET Core environment to Production.
 ENV ASPNETCORE_ENVIRONMENT=Production
 
 # Define the entry point for the container.
 # This command runs your ASP.NET Core application.
 ENTRYPOINT ["dotnet", "backend.dll"]
+
+# Instructions to build and run:
+# 1. Ensure this Dockerfile is located directly inside your 'backend' project folder.
+# 2. Build the Docker image from the 'backend' folder:
+#    docker build -t my-aspnet-webapi .
+# 3. Run the Docker container, mapping port 7026 from the container to port 7026 on your host:
+#    docker run -p 7026:7026 -e ASPNETCORE_Kestrel__Certificates__Default__Password="YourCertPassword" -e ASPNETCORE_Kestrel__Certificates__Default__Path="/path/to/your/certificate.pfx" my-aspnet-webapi
+#    (Note: For HTTPS, you'll need to provide a certificate. The example above shows how to pass certificate path and password via environment variables.
+#    For development, you might temporarily disable HTTPS or use self-signed certs configured in your app.)
+# 4. Access your API in a browser or API client at https://localhost:7026/your-api-endpoint
