--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,32 @@
-# Base SDK image
-FROM mcr.microsoft.com/dotnet/sdk:8.0
+# -------- Stage 1: Build ----------
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+WORKDIR /src
 
+# Copy entire source into build context
+COPY . .
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish
+
+# -------- Stage 2: Runtime ----------
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
 
-# Copy everything into the container
-COPY . ./
+# Install OpenSSL for cert generation
+RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
 
-# Restore dependencies
-RUN dotnet restore
+# 📦 Copy published output
+COPY --from=build /app/publish .
 
-# Expose your HTTPS port
-EXPOSE 7026
-
-# Run using dev HTTPS profile
-CMD ["dotnet", "run", "--launch-profile", "https"]
+# 🔐 ENTRYPOINT: Generate cert + run app (migrations run via Program.cs)
+ENTRYPOINT ["bash", "-c", "\
+  echo '🔒 Generating self-signed HTTPS certificate...'; \
+  mkdir -p /https && \
+  openssl req -x509 -nodes -days 365 \
+    -newkey rsa:2048 \
+    -keyout /https/devcert.key \
+    -out /https/devcert.crt \
+    -subj '/CN=localhost'; \
+  export ASPNETCORE_Kestrel__Certificates__Default__Path=/https/devcert.crt && \
+  export ASPNETCORE_Kestrel__Certificates__Default__KeyPath=/https/devcert.key; \
+  echo '🚀 Starting backend...'; \
+  dotnet EmployeeManagement.API.dll"]
